--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@
 ## backend language though.
 language: node_js
 
-node_js:
-  - 5.3
+# node_js:
+#   - 5.3
 
-install:
-  - npm install
+# install:
+#   - npm install
 
 before_script:
   ## runs the 'start' script which
